# serializer version: 1
# name: test_compile[YAMLConfigFile-20240323]
  '''
  {'notes': [{'areas': ['gtd'],
              'body': ' #gtd pomodoro',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'p': '1'}},
             {'areas': ['own'],
              'body': ' #own Buy rubber duck',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'p': '2'}},
             {'areas': [],
              'body': ' +zorg Parametrize test_run_compile()',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '2'}},
             {'areas': [],
              'body': ' +zorg Move models.py and file_groups.py',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '3'}},
             {'areas': [],
              'body': ' +zorg Add links to grammar',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '3'}},
             {'areas': [],
              'body': ' +zorg Fix grammar so it works with this file',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '4'}},
             {'areas': [],
              'body': ' +zorg Add this file to test data',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '5'}},
             {'areas': [],
              'body': ' +zorg Filter out all numeric tag names',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '5'}},
             {'areas': [],
              'body': ' +zorg Test against all examples/ files',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '6'}},
             {'areas': [],
              'body': " +zorg wip: Replace 'john@' with '%john'",
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '6'}},
             {'areas': [],
              'body': ' +laundry dry whites',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '7'}},
             {'areas': [],
              'body': ' +zorg wip: migrate people',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '7'}},
             {'areas': [],
              'body': " +zorg Finished 'john@' to '%john' migration",
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '8'}},
             {'areas': [],
              'body': ' +zorg Updated grammar to handle quotes',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '9'}},
             {'areas': [],
              'body': ' +laundry wip: fold darks',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '10'}},
             {'areas': [],
              'body': ' +laundry fold darks',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '11'}},
             {'areas': [],
              'body': ' +laundry wash delicates',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '12'}},
             {'areas': [],
              'body': ' +zorg [[xmind/zorg_e2e_query_arch.xmind]]',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['xmind/zorg_e2e_query_arch.xmind'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '14'}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-basic]
  '''
  {'notes': [{'areas': [],
              'body': ' First note in first block',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Second note in first block',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' bazbuz is ok too...',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-links]
  '''
  {'notes': [{'areas': [],
              'body': ' Some note with a [[bar.sh]] link to a bash script.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['bar.sh'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens (see [[baz]]).',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['baz'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens and a block-level link '
                      '([[buz::fuzz]]).',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['buz::fuzz'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-multiblocks]
  '''
  {'notes': [{'areas': [],
              'body': ' A note about life...',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' With a note',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note in section 0',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note A1',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note A2',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note B',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note C',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note D',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note E',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' Some todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Another related todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some other todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-priority]
  '''
  {'notes': [],
   'todos': [{'areas': [],
              'body': ' 2024-03-13 High Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'A',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' 2024-03-13 Medium Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'B',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' 2024-03-13 Low Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 13, 0, 0),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-property]
  '''
  {'notes': [{'areas': [],
              'body': ' 2024-03-30 This note contains a key::value pair.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDatetime(2024, 3, 30, 0, 0),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'key': 'value', 'p': '1'}}],
   'todos': [{'areas': [],
              'body': ' This todo is @due today! | due::2024-03-13',
              'child_notes': [],
              'contexts': ['due'],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {'due': '2024-03-13', 'p': '1'},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-scrambled_prj_notes]
  '''
  {'notes': [{'areas': [],
              'body': ' Sqtdicu Gfwebkj: fdxd://rd/czge-nxgz-vmuncaf',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms'],
              'properties': {}},
             {'areas': [],
              'body': ' Reqzlu Zkba Inzlqq Zusqxur: '
                      'pclx://hn/oqdu-syxf-oxzpzp-hxdszea',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms'],
              'properties': {}},
             {'areas': [],
              'body': ' Tzus %clyzajrm: +cmeq ylevgv frxb gevcfp xa 26cb',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': ['clyzajrm'],
              'prev_note': None,
              'projects': ['arms/cmeq'],
              'properties': {}},
             {'areas': [],
              'body': ' Eongcgfy tho pscz giwq arjebc@?',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/saxy'],
              'properties': {}},
             {'areas': [],
              'body': ' Crxekimyx kq fjboaq:\n'
                      '  - Lcnoajccb Injdqwlf\n'
                      '  - Lrry-Jhfv Nfsw\n'
                      '  - Ga Ewwnanwqgoq\n'
                      '  - Gaonrjmk: Cbnuev, Xvdgisy, Aeyfbb?\n'
                      '  - Vont ywgotqe vndsv (lfqbnlfar, kwmnafb, '
                      'Yneicgqi/Mxvvkclvzk)\n'
                      '  - Eyfptapyh ijmfacppn (lqrui ?jr=HF)\n'
                      '  - Gziien fxfmhul\n'
                      '  - Ajfn dz Rhyt (ty 6499 cw 6075)',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/saxy'],
              'properties': {}},
             {'areas': [],
              'body': ' setw://fq/zfv-haow-micxv',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/judo/vfntwi'],
              'properties': {}},
             {'areas': [],
              'body': ' sorj\n'
                      '  - '
                      'bhkh://xzywfi3/relyocplej/dpw/qk/otehzx/qpsiyunh/rgthilw_sldeu/fonvlqflxv/rjluzb/tbf/hrtkdrq_mnurg_eltj_szkb.raja\n'
                      '  - '
                      'knlo://evfkaz3/kmxgifnodz/wav/nz/idlwsr/oslzcscp/raarqgi_bjfdp/xftsdpbcka/itulza/prk/pkgxzoc_zgntm_txeg_npbvju.jldf',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/judo/vfntwi'],
              'properties': {}},
             {'areas': [],
              'body': ' ykseciqhy IG: bp/531522711',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/judo/vennc'],
              'properties': {}},
             {'areas': [],
              'body': ' Nyhha trra://hk/wyp-slg-lbyuqz pris oiqf nywj kg smoy '
                      'nwdraivpht() cu jzusgcwm zwyirs?',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/bmlakcr'],
              'properties': {}},
             {'areas': [],
              'body': ' Wouvp rx cmmi jk zes r kv/u1abtunoeaorevyolmef: "Njwb '
                      'opjiv wlyvyfrb; tqcwkrs qlawalk: 200F."',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/bmlakcr/lozmhqjd'],
              'properties': {}},
             {'areas': [],
              'body': ' e2.0 xrestv rlqt cszmjhp: 1) Cnelcge 2) uttnzeu tncj 3) '
                      'Rasemja zzvilcys',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {}},
             {'areas': [],
              'body': ' Qtvhtfc ywtyvbppqu (qs odvqdfjk nydxt):\n'
                      '  - XC: Wvlotmog | Akjrgluk cck dpvcvia\n'
                      '  - Oers Higwy   | NYS / Cyuxu fyod mrfwalatc\n'
                      '  - Lveg         | Kfvunvqioefmgo Rlqu\n'
                      '  - HU: Yoxlnl   | Kyahuurpzq mt VV (v.u. boh coveshbg '
                      'rsp hbyhmm-pav)',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/bmlakcr/wjybwa'],
              'properties': {}},
             {'areas': [],
              'body': ' TbuburbQuf zilo '
                      'hpfu://wz/ytg:hep_epzc_ek_jehnmz?h=omm:cpdu :\n'
                      '    (2576796, 2584174, 2585902, 2611556, 2612222) ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/jws_pkaft'],
              'properties': {}},
             {'areas': [],
              'body': ' Kmue izlgeghae jivs kkhoh:\n'
                      '    (23068288959, 23070555923, 23071198233, 23081557400, '
                      '23082128453)',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/jws_pkaft'],
              'properties': {}},
             {'areas': [],
              'body': ' KU onbf\n'
                      '  - Adah wv wsr: Pwyv qrykrmat\n'
                      '  - Fjdu lk aozqwmt rdtv (ingu yhlzh kha zro zstolomj?): '
                      'Vujflym\n'
                      '  - Cyuyngz rpzj (<tzcx_zm> nat <iqge_xqu>): Opalekb / '
                      'Ubq hefcgpa\n'
                      '  - Snke udr djwhji ku iysauiroj (<wtflgi_jw_aykjvl>):\n'
                      '    - Puny mng lomkrpd\n'
                      '    - Eipahnv\n'
                      '    - <olxh_cqe>\n'
                      '  - Fe dxiovcyxz kuirhi: Kjwjjl hxd: '
                      '<lllwcz_bp_mjklvt>\\wZkzuguo/yckqyt: <awqxbdj>\n'
                      '  - Nid bzvqqd gktb uhwgmwk jfiwf atukar oq znzg-htqz '
                      'bpba?: (<izljyv_dk_ebsiqu>)\n'
                      '  - Poxi hdtlblgq:\n'
                      '    - Uripbc uui qr njuytfkxf\n'
                      '    - Dvfbqlk/ignpsr lb imwgiazpd\n'
                      '    - Rb rnfqqbizlps',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {}},
             {'areas': [],
              'body': ' Wuxpotyb:\n  - Me fkf zddkb?\n  - An fsqw hdegvhwy?',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {}},
             {'areas': [],
              'body': ' Tyrgbh iwj fcq jjuea qpltzla rkyq br at DS tfvwjwf?',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/owwnfb/qbsum'],
              'properties': {}},
             {'areas': [],
              'body': ' Rmy [[eswz_xqow::empiz_ljyiwjbmi_szstj]]',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['eswz_xqow::empiz_ljyiwjbmi_szstj'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/rgw_sxtvx'],
              'properties': {}},
             {'areas': [],
              'body': ' '
                      'nejo/vpe/gjggaa/fwi/kgrtqhtdy/ynbwnm/qekadk/cvhc/MqgomkswAgbkGhthPoqfvqt.ednt',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/rgw_sxtvx/zv_jzdd_djqa'],
              'properties': {}},
             {'areas': [],
              'body': ' '
                      'qiuz/adb/lhwggp/kqt/ldmqosmbs/qtjvrxutayfiyh/oocyfjbnuih/jmov/faaat/XibsjbhuFsbuRrawDgfksjcXwjudTvvzbxa.vvep',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/rgw_sxtvx/zv_jzdd_djqa'],
              'properties': {}},
             {'areas': [],
              'body': ' Ajbss udcor xf tylgpk:\n'
                      '  - ibmxadcdz.iwmdvsxeg_uxzvuntgl\n'
                      '  - '
                      'oiuglzpuv.xwhjvfwrs_imjxfgwoo.fvyclrkt_vqycmgeuj_ihblc\n'
                      '  - '
                      'ycdcddvhw.shmlpcnju_chsokpadf.bcpgad_hoargfl_fhzshiqoe_qrsrxtdsq\n'
                      '  - '
                      'bpeijqkwt.ysazfxpem_tnpnkohdy.nppowgku_kqhexqeih_njhno',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/ipyt/bqf/cpv_mociy'],
              'properties': {}},
             {'areas': [],
              'body': ' uceq://ap/591285707',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/ipyt/bqf/uahi'],
              'properties': {}},
             {'areas': [],
              'body': ' Git [[desd_cd_kdzb.yhdxx]] hgq lkl[1] @dzwk',
              'child_notes': [],
              'contexts': ['dzwk'],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['desd_cd_kdzb.yhdxx'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/xoao'],
              'properties': {}},
             {'areas': [],
              'body': ' Mcjr bdukfjxm 14521206',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {}},
             {'areas': [],
              'body': ' Spuekgphn 14521428',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {}},
             {'areas': [],
              'body': ' Necywz met td fuvbdooge 14524967',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {}},
             {'areas': [],
              'body': ' Fbtqtkb, fywupn qr mzrgsvqve 14521641',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {}},
             {'areas': [],
              'body': ' Uc lsmpfxhtkyh 14522952',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/vd_clxi/okwz'],
              'properties': {}},
             {'areas': [],
              'body': ' Ikr lr 20 pggmb',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/fgifr'],
              'properties': {}},
             {'areas': [],
              'body': ' Ttx-yecb mxovcuwbc',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/fgifr'],
              'properties': {}},
             {'areas': [],
              'body': ' Rzq-itde mpfj',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/fgifr'],
              'properties': {}},
             {'areas': [],
              'body': ' Zee-lpfg uqogce bk khxsvgrkq bbgvmf',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['arms/fgifr'],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subsections]
  '''
  {'notes': [{'areas': [],
              'body': ' Note about A1',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note about something',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Another note',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A note on the second section.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A sub-note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' And another note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' This is inside of h4_section!',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A note on the third section.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A sub-note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' And another note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' This is the final section!',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' A todo for something',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-tags]
  '''
  {'notes': [{'areas': ['tags'],
              'body': ' Some note',
              'child_notes': [],
              'contexts': ['fat_pig'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['foobar'],
              'properties': {}},
             {'areas': ['tags', 'thoughts'],
              'body': ' When I talk to %pig I always want to @puke.',
              'child_notes': [],
              'contexts': ['fat_pig', 'puke'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': ['pig'],
              'prev_note': None,
              'projects': ['foobar/bazbuz'],
              'properties': {}},
             {'areas': ['tags'],
              'body': ' Da nah nah nuh...',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['bad/to_the_bone'],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
